--- a/index.html
+++ b/index.html
@@ -40,27 +40,36 @@
     <section class="cards">
         <div class="container">
             <div class="card">
+                <img src="./img/purp haze.jpg" alt="purple haze">
                 <h2>Purple Haze</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis velit adipisci porro facilis minus mollitia aliquid nostrum autem cupiditate quaerat? Molestias omnis sint dolores fugiat nobis quasi nihil ratione in!</p>
-                <button>Order Now</button>
             </div>
             <div class="card">
+                <img src="/img/california.jpg" alt="">
                 <h2>California Kush</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis velit adipisci porro facilis minus mollitia aliquid nostrum autem cupiditate quaerat? Molestias omnis sint dolores fugiat nobis quasi nihil ratione in!</p>
-                <button>Order Now</button>
             </div>
             <div class="card">
-                <h2>CBD Oil</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis velit adipisci porro facilis minus mollitia aliquid nostrum autem cupiditate quaerat? Molestias omnis sint dolores fugiat nobis quasi nihil ratione in!</p>
-                <button>Order Now</button>
+                <img src="/img/og kush.jpg" alt="OG kush">
+                <h2>OG Kush</h2>
             </div>
         </div>
     </section>
     <section class="quote">
         <div class="container">
-            <blockquote>The illegality of cannabis is outrageous, an impediment to full utilization of a drug which helps produce the serenity and insight, sensitivity, and fellowship so desperately needed in this increasingly mad and dangerous world.</blockquote>
-            <h2><em>Carl Sagan</em></h2>
+            <blockquote><em>The illegality of cannabis is outrageous, an impediment to full utilization of a drug which helps produce the serenity and insight, sensitivity, and fellowship so desperately needed in this increasingly mad and dangerous world.</em></blockquote>
+            <h2>- Carl Sagan</h2>
         </div>
     </section>
+    <section class="sign-up container">
+        <div class="sign-up-text">
+            <h3>Subscribe to our Blazing newsletters.</h3>
+            <p>Click the button to subscribe to our newsletter and get daily supplies of your fave bud.</p>
+        </div>
+        <div class="sign-up-btn">
+            <button>Subscribe</button>
+        </div>
+    </section>
+    <footer class="footer container">
+        <p>Copyright &copy; <a href="https://github.com/ikenwaa/top-landing-page-project" target="_blank" rel="noreferrer">Augustine</a> - The Odin Project 2022</p>
+    </footer>
 </body>
 </html>
