Added minor finishing touches

--- a/index.html
+++ b/index.html
@@ -11,32 +11,38 @@
     <title>🔥Blaze🔥</title>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <div class="logo">Blaze</div>
-            <ul class="nav">
-                <li>
-                    <a href="#">Shop</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <header class="header">
-        <div class="container">
-            <div class="hero-text">
-                <h1>Welcome to Blaze!</h1>
-                <p>Blaze is the largest online store for <em>Cannabis</em> buds and CBD products. Not for sale to consumers under the age of 18.</p>
-                <button><a href="#">Shop Now</a></button>
+    <section>
+        <nav class="navbar">
+            <div class="container">
+                <div class="logo">Blaze</div>
+                <ul class="nav">
+                    <li>
+                        <a href="#">Shop</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
             </div>
-            <img src="img/cannabis.png" alt="medical marijuana">
-        </div>
-    </header>
+        </nav>
+    </section>
+
+    <section>
+        <header class="header">
+            <div class="container">
+                <div class="hero-text">
+                    <h1>Welcome to Blaze!</h1>
+                    <p>Blaze is the largest online store for <em>Cannabis</em> buds and CBD products. Not for sale to consumers under the age of 18.</p>
+                    <button><a href="#">Shop Now</a></button>
+                </div>
+                <img src="img/cannabis.png" alt="medical marijuana">
+            </div>
+        </header>
+    </section>
+    
     <section class="cards">
         <div class="container">
             <div class="card">
@@ -59,7 +65,7 @@
             <h2>- Carl Sagan</h2>
         </div>
     </section>
-    <section class="sign-up container">
+    <section class="sign-up">
         <div class="sign-up-text">
             <h3>Subscribe to our Blazing newsletters.</h3>
             <p>Click the button to subscribe to our newsletter and get daily supplies of your fave bud.</p>
@@ -69,7 +75,7 @@
         </div>
     </section>
     <footer class="footer container">
-        <p>Copyright &copy; <a href="https://github.com/ikenwaa/top-landing-page-project" target="_blank" rel="noreferrer">Augustine</a> - The Odin Project 2022</p>
+        <p>Copyright &copy; <a href="https://github.com/ikenwaa/top-landing-page-project" target="_blank" rel="noreferrer">Augustine</a> - <a href="https://www.theodinproject.com/">The Odin Project</a> 2022</p>
     </footer>
 </body>
 </html>
