--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h2>Purple Haze</h2>
             </div>
             <div class="card">
-                <img src="/img/california.jpg" alt="">
+                <img src="/img/california.jpg" alt="Cali kush">
                 <h2>California Kush</h2>
             </div>
             <div class="card">
