--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 <h2>Purple Haze</h2>
             </div>
             <div class="card">
-                <img src="/img/california.jpg" alt="Cali kush">
+                <img src="./img/california.jpg" alt="Cali kush">
                 <h2>California Kush</h2>
             </div>
             <div class="card">
-                <img src="/img/og kush.jpg" alt="OG kush">
+                <img src="./img/og kush.jpg" alt="OG kush">
                 <h2>OG Kush</h2>
             </div>
         </div>
